# multi-cmake-example

./: .gitignore  README.md  build.sh  export.sh
doc/: style.md
modules/base/: CMakeLists.txt  README  WELCOME
modules/base/adapterA/: CMakeLists.txt  CoreAdapterA.cpp  CoreAdapterA.h
modules/base/adapterA/cmake/: CPackProperties.cmake
modules/base/adapterA/include/base/: CoreAdapterA.h
modules/base/adapterA/src/: CoreAdapterA.cpp
modules/base/adapterB/: CMakeLists.txt
modules/base/adapterB/cmake/: CPackProperties.cmake
modules/base/adapterB/include/base/: CoreAdapterB.h
modules/base/adapterB/src/: CoreAdapterB.cpp
modules/base/cmake/: BaseConfig.cmake.in  CPackProperties.cmake  baseConfig.cmake
modules/base/core/: BaseCore.cpp  BaseCore.h  CMakeLists.txt
modules/base/core/cmake/: CPackProperties.cmake
modules/base/core/doc/: DESCRIPTION
modules/base/core/include/base/: BaseCore.h
modules/base/core/src/: BaseCore.cpp
modules/base/tests/adapterA/: CMakeLists.txt  TestAdapterA.cpp
modules/base/tests/adapterB/: CMakeLists.txt  TestAdapterB.cpp
modules/base/tests/core/: CMakeLists.txt  TestCore.cpp
modules/myApp1/: CMakeLists.txt  README
modules/myApp1/app/: CMakeLists.txt
modules/myApp1/app/cmake/: CPackProperties.cmake
modules/myApp1/app/src/: MyApp.cpp
modules/myApp1/cmake/: CPackProperties.cmake  MyApp1Config.cmake
modules/myApp1/tests/: CMakeLists.txt
modules/myStaticApp/: CMakeLists.txt  README  upstreamA
modules/myStaticApp/app/: CMakeLists.txt
modules/myStaticApp/app/cmake/: CPackProperties.cmake
modules/myStaticApp/app/src/: MyApp.cpp
modules/myStaticApp/cmake/: CPackProperties.cmake  MyApp1Config.cmake
modules/myStaticApp/tests/: CMakeLists.txt
modules/upstreamA/: CMakeLists.txt  README  WELCOME
modules/upstreamA/cmake/: CPackProperties.cmake  UpstreamAConfig.cmake  UpstreamAConfig.cmake.in
modules/upstreamA/lib/: CMakeLists.txt
modules/upstreamA/lib/cmake/: CPackProperties.cmake
modules/upstreamA/lib/include/upstreamA/: LibA.h
modules/upstreamA/lib/src/: LibA.cpp
modules/upstreamA/tests/: CMakeLists.txt  TestLibA.cpp
